--- a/work.html
+++ b/work.html
@@ -164,13 +164,13 @@
                     Events
                 </div>
             </div>
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
+            <a href="/movie-poster.html" class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
                 <img src="/our_works/MoviePosters.webp" class="h-full w-full object-cover" alt="Image">
                 <div
                     class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
                     Movie Posters
                 </div>
-            </div>
+            </a>
             <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
                 <img src="/our_works/Products.webp" class="h-full w-full object-cover" alt="Image">
                 <div
