--- a/movie-poster.html
+++ b/movie-poster.html
@@ -20,14 +20,9 @@
             font-family: 'Lato', sans-serif;
         }
 
-        .bg-movies {
-            background-image: url('/our_works/poster.jpg');
-            background-size: cover;
+        #animatedText {
+            background-size: 120%;
             background-repeat: no-repeat;
-            background-position: top;
-            min-height: 65dvh;
-            background-attachment: fixed;
-            /* Ensures the background doesn’t move */
         }
 
         [data-scroll-container] {
@@ -51,6 +46,50 @@
             /* Internet Explorer 10+ */
             scrollbar-width: none;
             /* Firefox */
+        }
+
+        .flip-card {
+            perspective: 1000px;
+            height: 580px;
+            /* Card height as per your request */
+        }
+
+        @media (max-width: 768px) {
+            .flip-card {
+                height: 400px;
+                /* or any smaller value for mobile */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .flip-card {
+                height: 300px;
+            }
+        }
+
+        .flip-card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+        }
+
+        .flip-card:hover .flip-card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .flip-card-front,
+        .flip-card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            /* Tailwind's rounded-xl */
+        }
+
+        .flip-card-back {
+            transform: rotateY(180deg);
         }
     </style>
 </head>
@@ -126,25 +165,220 @@
 
     <!--Main Content-->
     <!-- Main Page -->
-    <section id="textSection" class="relative w-full flex items-center justify-center bg-white bg-movies"
+    <section id="textSection" class="relative w-full flex items-center justify-center bg-white h-[60vh]"
         data-scroll-section>
-        <!-- Overlay -->
-        <div class="absolute inset-0 bg-white"></div>
-
-        <!-- Transparent Text -->
+        <!-- Transparent Text Acting as Stencil -->
         <h1 id="animatedText"
-            class="absolute flex items-center justify-center text-[10vw] font-bold text-transparent bg-clip-text bg-movies text-center">
+            class="text-[10vw] font-bold text-transparent bg-clip-text bg-fixed bg-center bg-[url('/our_works/poster.jpg')]">
             MOVIE POSTERS
         </h1>
     </section>
 
 
-
-
     <!-- Section work gallery -->
-    <section class="scroll-container horizontal-scroll-content" data-scroll-section>
+    <section class="p-4">
+        <div class="grid gap-4 grid-cols-2 sm:grid-cols-2 lg:grid-cols-4" data-scroll-section>
+            <!-- Gallery Images with Overlay -->
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/movie.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/dn.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/dn.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/mei.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/mei.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/beast.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/beast.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/thunivu.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/thunivu.jpg" alt="Front Image"
+                            class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/dn.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/dn.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/mei.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/mei.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/beast.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/beast.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/thunivu.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/thunivu.jpg" alt="Front Image"
+                            class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/mei.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/mei.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/beast.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/beast.jpg" alt="Front Image" class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/thunivu.jpg')">
+                <div class="flip-card-inner w-full h-full">
+                    <!-- Front Side -->
+                    <div class="flip-card-front w-full h-full">
+                        <img src="/our_works/thunivu.jpg" alt="Front Image"
+                            class="w-full h-full object-cover shadow-lg">
+                    </div>
+
+                    <!-- Back Side -->
+                    <div
+                        class="flip-card-back w-full h-full bg-green-500 text-white flex items-center justify-center shadow-lg">
+                        <h2 class="text-xl font-bold">MOVIE TITLE</h2>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="p-2 col-span-2 sm:col-span-2 lg:col-span-4 text-right">
+                <a href="https://www.behance.net/gopiprasannaastudios" target="_blank"
+                    class="font-bold uppercase transition">
+                    i want to see them all >
+                </a>
+            </div>
+
+
+        </div>
 
     </section>
+
     <!--Footer-->
     <section data-scroll-section
         class="min-h-1/2 flex flex-col justify-center items-center bg-[#00001b] text-white text-center p-10">
@@ -239,6 +473,23 @@
         </div>
     </section>
 
+    <!-- Image view popup -->
+
+    <div id="fullscreen-image-modal"
+        class="hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-[60]">
+        <div class="relative">
+            <button onclick="closeFullscreenImage()"
+                class="hidden sm:flex absolute -top-6 -right-4 sm:-top-6 sm:-right-12 w-10 h-10 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-700 rounded-full text-xl shadow-lg z-50">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                    class="w-6 h-6">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+
+            <img id="fullscreen-img" src="" alt="Zoomed" class="max-w-[90vw] max-h-[90vh] rounded-lg shadow-2xl">
+        </div>
+    </div>
+
     <!-- loader -->
     <div id="loader"
         class="fixed inset-0 bg-white flex items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
@@ -268,6 +519,26 @@
                 alert("Your browser does not support sharing.");
             }
         });
+        // Close modal when clicking outside image (only if screen width < 776px)
+        document.getElementById("fullscreen-image-modal").addEventListener("click", (e) => {
+            if (window.innerWidth < 776 && !e.target.closest("img")) {
+                closeFullscreenImage();
+            }
+        });
+        function openFullscreenImage(src) {
+            const modal = document.getElementById('fullscreen-image-modal');
+            const image = document.getElementById('fullscreen-img');
+            image.src = src;
+            modal.classList.remove('hidden');
+            document.body.classList.add("overflow-hidden"); // Prevent scrolling
+        }
+
+        function closeFullscreenImage() {
+            const modal = document.getElementById('fullscreen-image-modal');
+            modal.classList.add('hidden');
+            document.getElementById('fullscreen-img').src = '';
+            document.body.classList.remove("overflow-hidden");
+        }
         const menuBtn = document.getElementById('menu-btn');
         const closeMenuBtn = document.getElementById('close-menu');
         const mobileMenu = document.getElementById('mobile-menu');
@@ -288,27 +559,38 @@
             }
         });
         gsap.registerPlugin(ScrollTrigger);
+
         const section = document.getElementById("textSection");
         const text = document.getElementById("animatedText");
 
         section.addEventListener("mousemove", (e) => {
             const { left, top, width, height } = section.getBoundingClientRect();
-            const xMove = ((e.clientX - left) / width - 0.5) * 30; // Small horizontal shift
-            const yMove = ((e.clientY - top) / height - 0.5) * 15; // Small vertical shift
+
+            // Calculate movement percentages
+            const xMove = ((e.clientX - left) / width - 0.5) * 15; // Smooth horizontal movement
+            const yMove = ((e.clientY - top) / height - 0.5) * 10; // Smooth vertical movement
+
+            const xBg = ((e.clientX - left) / width) * 100; // Background shift X
+            const yBg = ((e.clientY - top) / height) * 100; // Background shift Y
 
             gsap.to(text, {
                 x: xMove,
                 y: yMove,
-                duration: 0.3,
+                backgroundPosition: `${xBg}% ${yBg}%`,
+                duration: 0.4,
                 ease: "power2.out"
             });
         });
 
         section.addEventListener("mouseleave", () => {
-            gsap.to(text, { x: 0, y: 0, duration: 0.3, ease: "power2.out" }); // Reset position on mouse leave
+            gsap.to(text, {
+                x: 0,
+                y: 0,
+                backgroundPosition: "50% 50%",
+                duration: 0.4,
+                ease: "power2.out"
+            });
         });
-
-
 
         const scrollContainer = document.querySelector("[data-scroll-container]");
 
